--- a/qna/package.json
+++ b/qna/package.json
@@ -19,6 +19,7 @@
     "@toast-ui/react-editor": "^3.1.0",
     "prismjs": "^1.25.0",
     "react": "^17.0.2",
+    "react-copy-to-clipboard": "^5.0.4",
     "react-dom": "^17.0.2",
     "react-markdown": "^7.0.1",
     "react-redux": "^7.2.5",
