--- a/qna/package.json
+++ b/qna/package.json
@@ -26,20 +26,13 @@
     "react-scripts": "4.0.3",
     "react-syntax-highlighter": "^15.4.4",
     "react-uuid": "^1.0.2",
-    "redux": "^4.1.1",
-    "web-vitals": "^1.0.1"
+    "redux": "^4.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
   },
   "browserslist": {
     "production": [
